--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -691,6 +691,7 @@
 
 // IncrementSlider
 // ---------------------------------------
+@agate-incrementslider-bg-transform: none;
 @agate-incrementslider-border-radius: 0;
 @agate-incrementslider-horizontal-button-decrement-border-radius: @agate-slider-height 0 0 @agate-slider-height;
 @agate-incrementslider-horizontal-button-decrement-border-width: 0;
@@ -706,12 +707,12 @@
 @agate-incrementslider-vertical-button-decrement-border-width: 0;
 @agate-incrementslider-vertical-button-increment-border-radius: 0;
 @agate-incrementslider-vertical-button-increment-border-width: 0;
-@agate-incrementslider-vertical-button-margin: 0;
-@agate-incrementslider-vertical-margin: @agate-slider-vertical-margin;
+@agate-incrementslider-vertical-button-margin: 0 auto;
+@agate-incrementslider-vertical-margin: 0 auto;
 @agate-incrementslider-vertical-min-height: auto;
 @agate-incrementslider-vertical-slider-margin: 0;
-@agate-incrementslider-vertical-slider-padding: 0;
-@agate-incrementslider-vertical-small-slider-padding: (((@agate-slider-knob-width / 2) * @agate-slider-knob-resting-state-scale) + 3px) ((@agate-button-small-height - @agate-slider-track-height) / 2);
+@agate-incrementslider-vertical-slider-padding: (((@agate-slider-knob-width / 2) * @agate-slider-knob-resting-state-scale) + 3px) ((@agate-slider-height - @agate-slider-track-height) / 2);
+@agate-incrementslider-vertical-small-slider-padding: @agate-incrementslider-vertical-slider-padding;
 
 // RadioItem
 // ---------------------------------------
