--- a/styles/variables-electro.less
+++ b/styles/variables-electro.less
@@ -151,6 +151,7 @@
 
 // IncrementSlider
 // ---------------------------------------
+@agate-incrementslider-bg-transform: skewX(-@electro-skew);
 @electro-incrementslider-horizontal-slider-undertuck: 15px; // the amount the slider tucks underneath the side buttons
 @agate-incrementslider-horizontal-margin: 3px @agate-component-spacing;
 @agate-incrementslider-horizontal-slider-margin: 0 -@electro-incrementslider-horizontal-slider-undertuck;
