--- a/styles/variables-silicon.less
+++ b/styles/variables-silicon.less
@@ -431,6 +431,7 @@
 @agate-incrementslider-vertical-button-margin: (@agate-component-spacing * 2) 0;
 @agate-incrementslider-vertical-min-height: 510px;
 @agate-incrementslider-vertical-slider-padding: (((@agate-slider-knob-width / 2) * @agate-slider-knob-resting-state-scale) + 3px) ((@agate-slider-height - @agate-slider-track-height) / 2);
+@agate-incrementslider-vertical-small-slider-padding: (((@agate-slider-knob-width / 2) * @agate-slider-knob-resting-state-scale) + 3px) ((@agate-button-small-height - @agate-slider-track-height) / 2);
 
 // RadioItem
 // ---------------------------------------
